@@ -1,3 +1,7 @@
+Thu Feb 26 02:19:11 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* process.c (rb_f_exec): get rid of SEGV when exec failed.
+
 Wed Feb 25 21:17:33 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* gc.c (obj_free), io.c (rb_io_fptr_finalize), rubyio.h (OpenFile):
